--- a/stackFile.yml
+++ b/stackFile.yml
@@ -71,6 +71,26 @@ services:
     deployTo:
       - opencart
 
+  - name: pma
+    type: phpApache
+    version: 7.1
+    remoteAccess: true
+    ports:
+      - 8080
+    source:
+      type: git
+      url: https://github.com/phpmyadmin/phpmyadmin
+      version: STABLE
+    extensions:
+      - mysqli
+      - opcache
+    configFiles:
+      - dest: $MAIN_PATH/config.inc.php
+        src: ./configs/config.inc.php
+    localDeps: composer install
+    deployTo:
+      - main
+      
 hosts:
   - name: opencart
     requirements:
