--- a/configs/opencart.conf
+++ b/configs/opencart.conf
@@ -1,6 +1,6 @@
 server {
   listen $mainPort;
-  
+  $serviceNginxHTTPS
   root /var/www/$serviceName/upload;
   server_name $serviceDomains;
   index index.php index.html;
